[gd_scene load_steps=8 format=3 uid="uid://765ik4ctipst"]

[ext_resource type="Script" path="res://scenes/unit/unit.gd" id="1_l6ft8"]
[ext_resource type="Texture2D" uid="uid://bmuptkq2ls44k" path="res://sprites/slime.png" id="2_ddjpu"]
[ext_resource type="PackedScene" uid="uid://3ruxyshq3xbf" path="res://scenes/health_bar/health_bar.tscn" id="3_oj2v3"]
[ext_resource type="Texture2D" uid="uid://bqw3e8t14ydmk" path="res://sprites/stun.png" id="4_15hs0"]

[sub_resource type="Animation" id="Animation_hu5xt"]
resource_name = "Idle"
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_sihv2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k1evn"]
_data = {
"Idle": SubResource("Animation_hu5xt"),
"RESET": SubResource("Animation_sihv2")
}

[node name="Unit" type="Node2D"]
script = ExtResource("1_l6ft8")

[node name="Sprites" type="Sprite2D" parent="."]
texture = ExtResource("2_ddjpu")
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_k1evn")
}

[node name="DeathTimer" type="Timer" parent="."]

[node name="HealthBar" parent="." instance=ExtResource("3_oj2v3")]
position = Vector2(0, -10)

[node name="StunSprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("4_15hs0")

[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
